--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    @apply bg-black; /* Set body background color to black */
+}
+
+html {
+    -moz-background-inline-policy: continuous;
+    -webkit-background-inline-policy: continuous;
+}
+
+/* index.css */
+html, body {
+    background-color: black !important; /* Force the background color to black */
+    margin: 0;
+    height: 100%;
+}
